# data_science

./: .all-contributorsr.json  .all-contributorsrc  .gitignore  .nojekyll  .renvignore  CODEOWNERS  LICENSE  README.html  README.md  _quarto.yml  about.html  about.qmd  comparison.qmd  data_science.Rproj  index.html  index.qmd  listings.json  newpagelink.lua  robots.txt  search.json  sitemap.xml  style_guide.html  theme-dark.scss  theme-light.scss
.github/workflows/: install_system_deps.sh  preview.yml  publish.yaml  rebuild_site.yaml  rebuild_system_dependencies.r  renew_cache.yaml
blogs/: 2023-03-24_hotfix-with-git.html  index.html  index.qmd  index.xml
blogs/posts/: 2023-02-22-rstudio-tips.qmd  2023-03-24_hotfix-with-git.html  2023-03-24_hotfix-with-git.qmd  2023-04-26-reinstalling-r-packages.html  2023-04-26-reinstalling-r-packages.qmd  2023-04-26_alternative_remotes.html  2023-04-26_alternative_remotes.qmd  2024-01-10-advent-of-code-and-test-driven-development.html  2024-01-16_nearest_neighbour.qmd  (+8 more)
presentations/: 2023-02-23_coffee_and_coding.html  2023-02-23_coffee_and_coding.qmd  README.md  index.html  index.qmd  index.xml  su_presentation.scss
presentations/2025-09-11_coffee-and-coding/: pyproject.toml  slides.md  slides.qmd
presentations/2025-09-11_coffee-and-coding/pres.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
renv/: activate.R  settings.json
style/: data_storage.html  data_storage.qmd  git_and_github.html  git_and_github.qmd  project_structure.html  project_structure.qmd  shiny.qmd  style_guide.html  style_guide.qmd  team.html  team.qmd
(+3203 files in other folders)
