[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pres"
version = "0.1.0"
description = "Dependencies for Efficient Coding Quarto presentation"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "numba>=0.56.0",
    "jupyter-cache>=0.5.0",
    "jupyterlab-rise",
]
